bases/utils/pihole/ingress.route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pihole.reynn.net`)
      kind: Rule
      services:
        - name: pihole
          port: 80
      middlewares:
        - name: redirect-web-to-443@internal
        - name: pihole
          namespace: utils
  tls:
    secretName: reynn-net-cert
    options:
      name: recommended-tls-opts
      namespace: utils
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pihole
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    frameDeny: true
    contentTypeNosniff: true
    browserXssFilter: true
    customResponseHeaders:
      X-Robots-Tag: noindex,nofollow,nosnippet,noarchive,notranslate,noimageindex
    customFrameOptionsValue: allow-from https://reynn.net
